  TaskDependency class and for the gap_timing, gap_unit, gap_model attributes
  which are infact synonyms of schedule_timing, schedule_unit and
  schedule_model attributes coming from the ScheduleMixin class. So by using
  the __default_schedule_attr_name__ Stalker is able to display error messages
  complaining about gap_timing attribute instead of schedule_timing etc.

0.2.4
=====

* **New:** Added new class called ``Revision`` to hold info about Task
  revisions.
* **Update:** Renamed ``ScheduleMixin`` to ``DateRangeMixin``.
* **New:** Added a new mixin called ``ScheduleMixin`` (replacing the old one)
  which adds attributes like ``schedule_timing``, ``schedule_unit``,
  ``schedule_model`` and ``schedule_constraint``.
* **New:** Added ``Task.tickets`` and ``Task.open_tickets`` properties.
* **Update:** Removed unnecessary arguments (project_lead, tasks, watching,
  last_login) from User class.
* **Update:** The ``timing_resolution`` attribute is moved from the
  DateRangeMixin to Studio class. So instances of classes like Project or Task
  will not have their own timing resolution anymore.
* **New:** The Studio instance now overrides the values on stalker.defaults on
  creation and on load, and also the db.setup() function lets the first Studio
  instance that it finds to update the defaults. So it is now possible to use
  ``stalker.defaults`` all the time without worrying about the Studio settings.
* **Update:** The ``Studio.yearly_working_days`` value is now always an
  integer.
* **New:** Added a new method ``ScheduleMixin.least_meaningful_time_unit()`` to
  calculate the most appropriate timing unit and the value of the given seconds
  which represents an interval of time.
  
  So it will convert 3600 seconds to 1 hours, and 8424000 seconds to 1 years if
  it represents working time (as_working_time=True) or 2340 hours if it is
  representing the calendar time.
* **New:** Added a new method to ``ScheduleMixin`` called ``to_seconds()``. The